objects/xArbitrations_and_Complaints__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Arbitrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avoidable__c</fullName>
        <label>Avoidable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Arbitrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>xArbitration</label>
    <nameField>
        <label>Arbitrations and Complaints Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xArbitrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>